--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@
 body {
   background: var(--bg-color);
   color: var(--text-color);
-  transition: background 0.3s ease, color 0.3s ease;
 }
 
 ul {
@@ -152,29 +151,30 @@ header {
   animation: slideBottom 1s ease forwards;
   animation-delay: 0.4s;
 }
-
-.cta-button {
-  display: inline-block;
-  background-color: var(--main-color);
-  color: var(--bg-color);
-  padding: 1rem 2rem;
-  border-radius: 5px;
-  transition: all 0.5s ease;
-  cursor: pointer;
+.cta-button-container {
   opacity: 0;
   animation: slideTop 1s ease forwards;
   animation-delay: 1.6s;
 }
+
+.cta-button {
+  display: inline-block;
+  z-index: -10;
+  background-color: var(--main-color);
+  color: var(--bg-color);
+  padding: 1rem 2rem;
+  border-radius: 5px;
+  cursor: pointer;
+}
 .cta-button:hover {
   transform: scale(1.1);
 }
-
 .hero-image img {
   width: 300px;
   height: 300px;
   border-radius: 50%;
-  box-shadow: 0 0 25px var(--main-color);
   cursor: pointer;
+  box-shadow: 0 0 15px var(--main-color);
   animation: floatImage 3s ease-in-out infinite;
   animation-delay: 3s;
   transition: 0.4s ease;
@@ -182,8 +182,7 @@ header {
 }
 
 .hero-image img:hover {
-  box-shadow: 0 0 25px var(--main-color), 0 0 35px var(--main-color),
-    0 0 45px var(--main-color);
+  box-shadow: 0 0 15px var(--main-color), 0 0 25px var(--main-color);
   animation: none;
 }
 
