--- a/style.css
+++ b/style.css
@@ -187,8 +187,8 @@ header {
   animation: none;
 }
 
-.social-icons a {
-  display: inline-block;
+.hero-text .social-icons a {
+  display: inline-flex;
   justify-content: center;
   align-items: center;
   width: 42px;
@@ -198,19 +198,22 @@ header {
   border: 0.2rem solid var(--main-color);
   margin: 3rem 1.5rem 4rem 0;
   border-radius: 10%;
-  gap: 10px;
   transition: all 0.5s ease;
   animation: slideLeft 1s ease forwards;
   animation-delay: calc(var(--i) * 0.2s);
   opacity: 0;
 }
 
+.social-icons a i {
+  font-size: 1.5rem;
+}
+
 .social-icons a:hover {
-  transform: scale(1.2) translateY(-10px);
   color: var(--bg-color);
   background: var(--main-color);
   box-shadow: 0 0 25px var(--main-color);
 }
+
 /* Sections */
 section {
   text-align: center;
@@ -567,17 +570,10 @@ section h2 {
   transform-origin: center center;
 }
 
-.percentage {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-weight: bold;
-}
 .circle-wrap .percentage {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 40%;
+  left: 52%;
   transform: translate(-50%, -50%);
   font-size: 1.2rem;
   font-weight: bold;
@@ -592,22 +588,22 @@ section h2 {
 /* Individual skill animations */
 .creativity {
   animation: progress 1.5s ease-out forwards;
-  animation-delay: 0.5s;
+  animation-delay: 1s;
 }
 
 .communication {
   animation: progress 1.5s ease-out forwards;
-  animation-delay: 0.7s;
+  animation-delay: 1.1s;
 }
 
 .problem-solving {
   animation: progress 1.5s ease-out forwards;
-  animation-delay: 0.9s;
+  animation-delay: 1.2s;
 }
 
 .teamwork {
   animation: progress 1.5s ease-out forwards;
-  animation-delay: 1.1s;
+  animation-delay: 1.3s;
 }
 
 @keyframes progress {
@@ -692,7 +688,6 @@ footer .social-icons {
   margin-bottom: 1rem;
 }
 footer .social-icons a {
-  font-size: 25px;
   color: var(--main-color);
   border: 0px solid var(--main-color);
   width: 30px;
@@ -700,7 +695,7 @@ footer .social-icons a {
   line-height: 42px;
   display: inline-block;
   border-radius: 50%;
-  margin: 0 10px;
+  margin: 0 8px;
 }
 
 /* Animations */
