--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ header {
   animation-delay: 0.7s;
 }
 .hero-text .highlighted-name {
-  font-size: 45px; /* Slightly bigger */
+  font-size: 2.8rem; /* Slightly bigger */
   color: var(--main-color);
 }
 .hero-text .cursor {
@@ -193,8 +193,8 @@ header {
 }
 
 .hero-image img {
-  width: 300px;
-  height: 300px;
+  width: 400px;
+  height: 400px;
   border-radius: 50%;
   box-shadow: 0 0 25px var(--main-color);
   cursor: pointer;
@@ -254,7 +254,6 @@ header {
 .about-img img {
   width: 400px; /* same width and height */
   height: 400px;
-  object-fit: cover; /* crop to fit square */
   /* border: 2px solid var(--main-color); */
   /* border-radius: 50%; */
   /* box-shadow: 0 0 25px var(--main-color); */
@@ -276,12 +275,12 @@ header {
 }
 
 /* Education Section */
-.education-section {
+.education {
   padding: 6rem 9% 2rem;
-  background: var(--snd-bg-color);
+  background: var(--bg-color);
 }
 
-.education-section h2 {
+.education h2 {
   text-align: center;
   font-size: 2.5rem;
   margin-bottom: 4rem;
@@ -815,11 +814,7 @@ footer .social-icons a {
   }
 }
 /* Responsive Design */
-@media (max-width: 1200px) {
-  html {
-    font-size: 55%;
-  }
-}
+
 @media (max-width: 991px) {
   .hero {
     padding: 2rem 3%;
@@ -831,7 +826,10 @@ footer .social-icons a {
     padding: 2rem;
     height: 70%;
   }
-
+  .about-img img {
+    width: 300px;
+    height: 300px;
+  }
   .contact form .input-box .input-box {
     width: 100%;
   }
@@ -885,9 +883,11 @@ footer .social-icons a {
   .hero {
     flex-direction: column;
   }
-  .hero-text h1 {
-    font-size: 5rem;
+  .hero-text h2,
+  .highlighted-name {
+    font-size: 2rem;
   }
+
   .hero-text {
     order: 2;
     margin-left: 1rem;
